# resign

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flake.nix
proto/: resign.proto  sequoia.proto  ssh.proto
src/: agent.rs  lib.rs  main.rs  pkesk.rs
