[package]
name = "resign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sequoia-openpgp = "1.10.0"
openpgp-card = "0.2.7"
openpgp-card-pcsc = "0.2.1"
openpgp-card-sequoia = "0.0.14"
pinentry = "0.5.0"
secrecy = "0.8.0"
clap = { version = "3.2.12", features = [ "derive" ] }
anyhow = "1.0"
ssh-agent-lib = "0.2.5"
service-binding = "0.3.1"
sha2 = "0.10.2"
