[package]
name = "resign"
version = "0.6.0"
edition = "2021"

[dependencies]
sequoia-openpgp = "*"
openpgp-card = "*"
openpgp-card-pcsc = "*"
openpgp-card-sequoia = "*"
pinentry = "*"
secrecy = "*"
clap = { version = "*", features = [ "derive" ] }
anyhow = "*"
ssh-agent-lib = "*"
age-core = "*"
age-plugin = "*"
openssh-keys = "*"
sha2 = "*"
